--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,49 +1,36 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
 }
 
 body {
     background-color: #d9dcd6;
 }
 
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-}
 
-.header h1 {
-    display: inline-block;
+h1 {
     font-size: 48px;
+    display: inline-block;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-.header div {
+header {
     padding-top: 15px;
     margin-right: 20px;
-    float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
     margin-left: 25px;
+    background-color:rgb(120, 143, 207);
+    color:cornsilk;
 }
 
 a {
-    color: #ffffff;
-    text-decoration: none;
+    color:#ffffff;
+    font-weight: bolder;
+    margin: 10px;
+    
 }
 
 p {
