Re-positioning content boxes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,12 @@
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: #000000;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: 80% 40%;
+    background-position:2% 15%;
+    background-repeat: no-repeat;
 }
-
 
 h1 {
     font-size: 48px;
@@ -18,10 +21,8 @@ h1 {
 
 header {
     padding-top: 15px;
-    margin-right: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    margin-left: 25px;
     background-color:rgb(120, 143, 207);
     color:cornsilk;
 }
@@ -30,20 +31,18 @@ a {
     color:#ffffff;
     font-weight: bolder;
     margin: 10px;
-    
-}
+    }
 
 p {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .hero {
     height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    width: 80%;
+    margin-bottom: 10px;
+    position: absolute;
+    padding-top: 500px;
 }
 
 .float-left {
@@ -57,17 +56,16 @@ p {
 }
 
 .content {
-    width: 75%;
-    display: inline-block;
+    width: 100%;
+    display:inline-block;
     margin-left: 20px;
 }
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
     float: right;
-    width: 20%;
+    width: 18%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -126,7 +124,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color:#0072bb;
     color: #ffffff;
 }
 
@@ -175,8 +173,12 @@ p {
     font-size: 36px;
 }
 
+
+
+
+
+
 footer {
-    padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
