--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,62 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-    background-color: #000000;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: 80% 40%;
-    background-position:2% 15%;
-    background-repeat: no-repeat;
+    background-color: #d9dcd6;
 }
 
-h1 {
-    font-size: 48px;
+.header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+}
+
+.header h1 {
     display: inline-block;
+    font-size: 48px;
 }
 
-.seo {
+.header h1 .seo {
     color: #d9dcd6;
 }
 
-header {
+.header div {
     padding-top: 15px;
+    margin-right: 20px;
+    float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    background-color:rgb(120, 143, 207);
-    color:cornsilk;
+}
+
+.header div ul {
+    list-style-type: none;
+}
+
+.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
 }
 
 a {
-    color:#ffffff;
-    font-weight: bolder;
-    margin: 10px;
-    }
+    color: #ffffff;
+    text-decoration: none;
+}
 
 p {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .hero {
     height: 800px;
-    width: 80%;
-    margin-bottom: 10px;
-    position: absolute;
-    padding-top: 500px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .float-left {
@@ -56,16 +70,17 @@ p {
 }
 
 .content {
-    width: 100%;
-    display:inline-block;
+    width: 75%;
+    display: inline-block;
     margin-left: 20px;
 }
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
+    clear: both;
     float: right;
-    width: 18%;
+    width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -124,7 +139,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color:#0072bb;
+    background-color: #0072bb;
     color: #ffffff;
 }
 
@@ -173,15 +188,13 @@ p {
     font-size: 36px;
 }
 
-
-
-
-
-
-footer {
+.footer {
+    padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    font-size: 20px;
 }
 
+.footer h2 {
+    font-size: 20px;
+}
